Error Handling middlleware added

--- a/src/Presentation/OnionArcExample.WebAPI/appsettings.json
+++ b/src/Presentation/OnionArcExample.WebAPI/appsettings.json
@@ -33,7 +33,7 @@
       {
         "Name": "File",
         "Args": {
-          "path": "C:\\pyc-log\\logs.json",
+          "path": ".\\pyc-log\\logs.json",
           "formatter": "Serilog.Formatting.Json.JsonFormatter, Serilog"
         }
       }
