--- a/src/Core/OnionArcExample.Application/OnionArcExample.Application.csproj
+++ b/src/Core/OnionArcExample.Application/OnionArcExample.Application.csproj
@@ -5,7 +5,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="AutoMapper" Version="11.0.1" />    <PackageReference Include="Microsoft.AspNetCore" Version="2.2.0" />    <PackageReference Include="Microsoft.AspNetCore.Authentication" Version="2.2.0" />    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="5.0.1" />
+    <PackageReference Include="AutoMapper" Version="11.0.1" />
+    <PackageReference Include="FluentValidation" Version="11.2.1" />    <PackageReference Include="Microsoft.AspNetCore" Version="2.2.0" />    <PackageReference Include="Microsoft.AspNetCore.Authentication" Version="2.2.0" />    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="5.0.1" />
 
     <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.2.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="6.0.0" />
