Validation is automated

--- a/src/Infrastructure/OnionArcExample.Persistence/OnionArcExample.Persistence.csproj
+++ b/src/Infrastructure/OnionArcExample.Persistence/OnionArcExample.Persistence.csproj
@@ -17,4 +17,8 @@
     <ProjectReference Include="..\..\Core\OnionArcExample.Domain\OnionArcExample.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="UnitOfWork\" />
+  </ItemGroup>
+
 </Project>
