--- a/src/Core/OnionArcExample.Application/OnionArcExample.Application.csproj
+++ b/src/Core/OnionArcExample.Application/OnionArcExample.Application.csproj
@@ -7,7 +7,7 @@
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="11.0.1" />
     <PackageReference Include="FluentValidation" Version="11.2.1" />    <PackageReference Include="Microsoft.AspNetCore" Version="2.2.0" />    <PackageReference Include="Microsoft.AspNetCore.Authentication" Version="2.2.0" />    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="5.0.1" />
-
+	 <PackageReference Include="FluentValidation.AspNetCore" Version="11.2.2" />
     <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.2.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="6.0.0" />
     <PackageReference Include="Microsoft.Extensions.Options" Version="6.0.0" />
@@ -17,6 +17,10 @@
 
   <ItemGroup>
     <ProjectReference Include="..\OnionArcExample.Domain\OnionArcExample.Domain.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Interfaces\UnitOfWork\" />
   </ItemGroup>
 
 </Project>
