--- a/src/Infrastructure/OnionArcExample.Infrastructure/OnionArcExample.Infrastructure.csproj
+++ b/src/Infrastructure/OnionArcExample.Infrastructure/OnionArcExample.Infrastructure.csproj
@@ -8,4 +8,8 @@
     <ProjectReference Include="..\..\Core\OnionArcExample.Application\OnionArcExample.Application.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Services\" />
+  </ItemGroup>
+
 </Project>
