--- a/src/Presentation/OnionArcExample.WebAPI/OnionArcExample.WebAPI.csproj
+++ b/src/Presentation/OnionArcExample.WebAPI/OnionArcExample.WebAPI.csproj
@@ -6,6 +6,8 @@
 
   <ItemGroup>
  
+    <PackageReference Include="FluentValidation.AspNetCore" Version="11.2.2" />
+ 
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="5.0.1" NoWarn="NU1605" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.OpenIdConnect" Version="5.0.1" NoWarn="NU1605" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="5.0.3">
